# SEL3-2025-Groep-6

./: .gitignore  ES_Model.py  README.md  SimulationState.py  brittle_star_environment.py  brittle_star_gym_environment.py  brittlestar_gym_environment.py  cleanRL.py  config.py  cpg.py  environment.py  es-optuna.py  es_problem.py  evosax_brittle_star_nn.pkl  final_model_gen5.msgpack  jax_env.py  main.py  neural_network.py  new_env.py  nn.py  ppo-again.py  pyproject.toml  render.py  requirements.txt  train.pbs  train.py  train_ES.py  train_es.pbs  train_es.py  train_es_nn.py  train_ppo.py  util.py  wandb_evosax_logger.py  wandb_ppo_callback.py
es/: brittle_star_environment.py  es-optuna.py  run_simulation.py  train_es.py
es_try/: BrittleStarProblem.py  startover.py  train.py
experimenting/: jax_env.py  ppo-again.py
groep6/: SimulationState.py  config.py  cpg.py  defaults.py  nn.py  render.py  util.py  wandb_evosax_logger.py
groep6/es/: brittle_star_environment.py  defaults.py  es-optuna.py  run_simulation.py  train_es.py
groep6/ppo/: brittle_star_gym_environment.py  config.py  defaults.py  run_simulation.py  train_ppo.py
ppo/: brittle_star_gym_environment.py  train_ppo.py
