[tool.poetry]
package-mode = false
name = "bio-robot-cpg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
jax = {extras = ["cuda12"], version = "0.5.0"}
matplotlib = "3.10.0"
mediapy = "1.2.2"
wandb = "0.19.6"
biorobot = "0.3.7"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
